--- a/app/views/fees/associati.html.erb
+++ b/app/views/fees/associati.html.erb
@@ -18,6 +18,7 @@
 <div class="autoscroll">
 <table class="table-fix list">
   <thead><tr>
+    <%= sort_header_tag('id', :caption => l(:field_id), :style => 'width: 5%; text-align:left;') %>
   <%= sort_header_tag('person', :caption => l(:field_user_fee), :style => 'width: 35%;') %>
   <%= sort_header_tag('mail', :caption => l(:field_mail), :style => 'width: 20%;') %>
   <%= sort_header_tag('datascadenza', :caption => l(:field_data_scadenza), :default_order => 'desc', :style => 'width: 15%;') %>
@@ -28,6 +29,7 @@
   <tbody>
 <% for user in @users -%>
   <tr class='user <%= cycle("odd", "even") %> <%= %w(anon active registered locked)[user.status] %>'>
+    <td class="id"><%= h(user.id.to_s) %></td>
     <%# user.login user.firstname user.lastname %>
   <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
   <td class="email"><%= mail_to(h(user.mail)) %></td>
