fix facebook share

--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,13 +1,27 @@
 <% if articolo %>
-    <script type="text/javascript">
-        function fbshareme() {
-            window.open(
-                    'https://www.facebook.com/sharer/sharer.php?s=100&p[url]=<%= link_to_articolo(articolo, :only_path => false).to_s %>&p[images][0]=http://<%= Setting.host_name.to_s + '/images/' + art_image(articolo, :l) %>&p[title]=<%= ERB::Util.url_encode(articolo.subject)%>&p[summary]=<%= ERB::Util.url_encode(smart_truncate(articolo.summary, 220)) %>',
-                    'facebook-share-dialog',
-                    'width=626,height=436'
-                );
+    <div id="fb-root"></div>
+    <script src='http://connect.facebook.net/en_US/all.js'></script>
+    <script>
+        // app_id on fb :
+        // fiscosport.it = 471915342913619
+        //localhost:3000 = 615981538449222
+        FB.init({appId: "471915342913619", status: true, cookie: true});
+
+        function postToFeed() {
+            // calling the API ...
+            var obj = {
+                method: "feed",
+                redirect_uri: "<%= link_to_articolo(articolo, :only_path => false).to_s %>",
+                link: "<%= link_to_articolo(articolo, :only_path => false).to_s %>",
+                picture: "<%= Setting.host_name.to_s + '/images/' + art_image(articolo, :l) %>",
+                name: "<%= articolo.subject.tr('"',"'") %>",
+                caption: "",
+                description: "<%= smart_truncate(articolo.summary, 220).tr('"',"'") %>"
+            };
+            FB.ui(obj);
         }
     </script>
+
     <div class="fs-postmetadataheader">
       <div class="fs-art-sezione-full">&nbsp;<%= articolo.section.full_name %></div>
       <div class="fs-postheader-full">      <%= articolo.subject %>  </div>
@@ -22,7 +36,8 @@
               <%= raw(articolo.summary).html_safe %>
           <% end %>
         </p>
-          <div class="fs-postmetadata-full">
+
+        <div class="fs-postmetadata-full">
           <div class="fs-author">
             <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                 <span><%= link_to articolo.author.my_avatar(:s), profile_show_path(articolo.author.user_profile) %> </span><span style="padding-left:10px;"> <%= h articolo.author %>
@@ -34,7 +49,7 @@
           </div>
           <div class='fs-social'>
             <div class='fs-social-fb '>
-              <%= image_tag "ico/fb-share.jpg",:onclick=> 'fbshareme()' %>
+              <%= image_tag "ico/fb-share.jpg", :onclick => 'postToFeed()' %>
             </div>
             <div class='fs-social-tw '>
               <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a>
@@ -44,7 +59,7 @@
               <div class="g-plusone" data-size="medium" data-recommendations="false">
                 <!-- Place this tag after the last +1 button tag. -->
                 <script type="text/javascript">
-                    window.___gcfg = {lang:'it'};
+                    window.___gcfg = {lang: 'it'};
                     (function () {
                         var po = document.createElement('script');
                         po.type = 'text/javascript';
@@ -63,16 +78,15 @@
         </div>
       </div>
     </div>
-    <div id="fbx" style="min-height: 20px; background-color: navajowhite; "></div>
     <div class="clearfix">&nbsp; <br/></div>
     <div class="fs-layout-cell layout-item-1">
-     <div id="fs-articolo-full ">
+      <div id="fs-articolo-full ">
         <%= raw(articolo.description) %>
         <br/>
       </div>
     </div>
     <div class="fs-attachments">
-      <%= link_to_fs_attachments(articolo, :author => false ) %>
+      <%= link_to_fs_attachments(articolo, :author => false) %>
     </div>
     <div class="fs-articolo-full-bottom">
 
