--- a/app/views/invoices/invoice_receiver.erb
+++ b/app/views/invoices/invoice_receiver.erb
@@ -17,7 +17,7 @@
       <% end %>
       <%= text_field_tag 'name', params[:name], :size => 30 %>
       <%= submit_tag l(:button_apply), :class => "small", :name => nil %>
-      <%= link_to l(:button_clear), users_path, :class => 'icon icon-reload' %>
+      <%= link_to l(:button_clear), invoice_receiver_path, :class => 'icon icon-reload' %>
     </fieldset>
 <% end %>
 &nbsp;
