--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -4295,7 +4295,7 @@ input.inputerror {
     margin: 2px 0 0 11px;
     text-shadow: 0 -1px 0 #354c6e;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'lucida grande', tahoma, verdana, arial, sans-serif;
-    font-size: 11px;
+    font-size: 11px!important;
 }
 
 .fb_share_buttonIcon {
